--- a/css/style.css
+++ b/css/style.css
@@ -39,14 +39,13 @@ h6 {
 }
 
 ul,
-li {
-  list-style: none;
-}
-
-ul,
 p {
   margin: 0;
   padding: 0;
+}
+
+ul {
+  padding-left: 15px;
 }
 
 a {
@@ -82,15 +81,27 @@ body {
 }
 
 a {
-  transition: all 0.3s ease;
+  white-space: nowrap;
+  color: #05a0d2;
+  transition: all 0.4s ease;
+}
+
+a:hover {
+  color: #00b705;
+}
+
+ul,
+p {
+  font-size: 11px;
+  text-align: justify;
 }
 
 .content {
   display: flex;
   background-color: #05a0d2;
-  -webkit-box-shadow: -103px 109px 63px 0px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: -103px 109px 63px 0px rgba(0, 0, 0, 0.5);
-  box-shadow: -103px 109px 63px 0px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: -40px 40px 63px 0px rgba(0, 0, 0, 0.35);
+  -moz-box-shadow: -40px 40px 63px 0px rgba(0, 0, 0, 0.35);
+  box-shadow: -40px 40px 63px 0px rgba(0, 0, 0, 0.35);
 }
 
 .header {
@@ -102,18 +113,14 @@ a {
 }
 
 .header .section-left {
-  padding-top: 20px;
-  padding-bottom: 37px;
+  padding-top: 10px;
+  padding-bottom: 20px;
   border-bottom: 12px solid #ffffff;
 }
 
 .header .section-right {
   padding-left: 35px;
   padding-right: 35px;
-}
-
-.main {
-  padding-bottom: 20px;
 }
 
 .main .section-left {
@@ -128,21 +135,16 @@ a {
   background-color: #ffffff;
 }
 
-.footer {
-  padding-bottom: 50px;
-}
-
 .footer__wrap {
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  height: 125px;
+  height: 35px;
 }
 
 .footer__wrap p {
   font-size: 12px;
   line-height: 18px;
-  color: #5a5a5a;
 }
 
 .footer__link-logo {
@@ -151,7 +153,7 @@ a {
 }
 
 .footer__link-logo img {
-  width: 65px;
+  width: 45px;
   transition: all 0.8s ease;
   transform: rotateY(0deg);
 }
@@ -162,8 +164,8 @@ a {
 
 .section-left {
   width: 40%;
-  padding-left: 35px;
-  padding-right: 35px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .section-right {
@@ -172,8 +174,8 @@ a {
 
 .header__title {
   max-width: 300px;
-  font-size: 56px;
-  line-height: 56px;
+  font-size: 50px;
+  line-height: 50px;
   font-weight: 700;
   letter-spacing: 4px;
   color: #ffffff;
@@ -185,7 +187,7 @@ a {
 }
 
 .main-section-right__wr {
-  padding: 45px 35px 35px;
+  padding: 20px 30px 35px;
   background-color: #ffffff;
 }
 
@@ -205,6 +207,7 @@ a {
 }
 
 .title-flowerblue {
+  margin-top: 20px;
   background-color: #05a0d2;
 }
 
@@ -217,10 +220,6 @@ a {
 .section__title {
   color: #ffffff;
   text-transform: uppercase;
-}
-
-.mt-50 {
-  margin-top: 50px;
 }
 
 .photo {
@@ -238,8 +237,83 @@ a {
   border-radius: 50%;
   overflow: hidden;
 }
+
+.photo__inner img {
+  width: 100%;
+  height: auto;
+}
+
 .block-title {
+  margin-top: 15px;
   font-size: 1.07em;
+  line-height: 150%;
+  letter-spacing: 1.15px;
   font-weight: 900;
   text-transform: uppercase;
+}
+
+.title-underline {
+  margin-bottom: 8px;
+  max-width: 150px;
+  border: 1px solid #05a0d2;
+}
+
+.code {
+  padding: 7px;
+  font-size: 10px;
+  line-height: 170%;
+  letter-spacing: -0.7px;
+  font-weight: 300;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
+}
+
+li {
+  margin-bottom: 5px;
+}
+
+blockquote {
+  margin-top: 10px;
+  padding-left: 15px;
+  font-size: 11px;
+  text-align: justify;
+  color: #939393;
+  border-left: 4px solid #05a0d2;
+}
+
+aside ul {
+  font-size: 13px;
+}
+
+.test {
+  font-size: 15px;
+  font-weight: 900;
+}
+.test a {
+  padding-left: 10px;
+}
+
+.test a,
+p a,
+li a {
+  font-size: 13px;
+  font-weight: 700;
+}
+
+h5,
+h6 {
+  margin-top: 10px;
+}
+
+h4 {
+  margin-bottom: 5px;
+}
+
+.list {
+  list-style: none;
+  padding: 0;
+}
+
+.list-certificate {
+  margin-top: 10px;
 }
