--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
   padding: 0;
   border: 0;
   box-sizing: border-box;
-  -webkit-tap-highlight-color: transparent;
 }
 
 * {
@@ -99,8 +98,6 @@ p {
 .content {
   display: flex;
   background-color: #05a0d2;
-  -webkit-box-shadow: -40px 40px 63px 0px rgba(0, 0, 0, 0.35);
-  -moz-box-shadow: -40px 40px 63px 0px rgba(0, 0, 0, 0.35);
   box-shadow: -40px 40px 63px 0px rgba(0, 0, 0, 0.35);
 }
 
@@ -137,19 +134,20 @@ p {
 
 .footer__wrap {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
   height: 35px;
 }
 
 .footer__wrap p {
+  margin-left: 30px;
+  margin-right: 30px;
   font-size: 12px;
   line-height: 18px;
 }
 
 .footer__link-logo {
   display: block;
-  margin-right: 40px;
 }
 
 .footer__link-logo img {
@@ -158,7 +156,19 @@ p {
   transform: rotateY(0deg);
 }
 
+.footer__link-logo svg {
+  width: 20px;
+  height: 20px;
+  fill: #000000;
+  transition: all 0.8s ease;
+  transform: rotateY(0deg);
+}
+
 .footer__link-logo img:hover {
+  transform: rotateY(360deg);
+}
+
+.footer__link-logo svg:hover {
   transform: rotateY(360deg);
 }
 
